[package]
name = "DiscordBotRust"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "api-all"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
